2008-01-18  Glenn Morris  <rgm@gnu.org>

	* ffap.el (ffap-alist): Remove space from RFC regexp.

2008-01-18  Richard Stallman  <rms@gnu.org>

	* custom.el (custom-theme-recalc-face): Use face-spec-set rather
	than face-spec-recalc.

2008-01-18  Glenn Morris  <rgm@gnu.org>

	* ibuffer.el (ibuffer-mode): Fix typo in previous change.

2008-01-17 Vinicius Jose Latorre <viniciusjl@ig.com.br>
2008-01-17 Miles Bader <miles@gnu.org>

	* blank-mode.el: New file.  Minor mode to visualise (HARD) SPACE,
	TAB, NEWLINE.  Miles Bader <miles@gnu.org> wrote the original code
	for handling display table (via visws.el package), his code was
	modified, but the main idea was kept.

2008-01-17  Glenn Morris  <rgm@gnu.org>

	* ibuf-ext.el (ibuffer-auto-mode, ibuffer-save-filter-groups)
	(ibuffer-save-filters): Remove calls to deleted
	ibuffer-update-mode-name.

2008-01-16  Martin Rudalics  <rudalics@gmx.at>

	* longlines.el (longlines-mode, longlines-show-region)
	(longlines-unshow-hard-newlines): Bind buffer-file-name and
	buffer-file-truename to nil while modifying buffer.

	* cus-edit.el (custom-reset-standard-variables-list)
	(custom-reset-standard-faces-list): New variables.
	(custom-reset-standard-save-and-update): New function.
	(Custom-save): Apply custom-mark-to-save before and
	custom-state-set-and-redraw after saving options.
	(Custom-reset-standard): Apply custom-mark-to-reset-standard to
	options and call custom-reset-standard-save-and-update.
	(custom-variable, custom-face, custom-group): Provide new
	entries for custom-mark-to-save, custom-mark-to-reset-standard,
	and custom-state-set-and-redraw.
	(custom-variable-mark-to-save)
	(custom-variable-state-set-and-redraw)
	(custom-variable-mark-to-reset-standard)
	(custom-face-mark-to-save, custom-face-state-set-and-redraw)
	(custom-face-mark-to-reset-standard)
	(custom-group-mark-to-save, custom-group-state-set-and-redraw)
	(custom-group-mark-to-reset-standard): New functions.