@@ -1,3 +1,11 @@
+2008-01-18  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el: Add a TODO note about vc-state.
+	(vc-next-action): Register 'unregistered and 'ignored files.  Use
+	when and unless instead of if where appropriate.
+	(vc-start-entry): Fix typo.
+	(vc-status): Autoload it.
+
 2008-01-18  Glenn Morris  <rgm@gnu.org>
 
 	* ffap.el (ffap-alist): Remove space from RFC regexp.
@@ -12,7 +20,7 @@
 	* ibuffer.el (ibuffer-mode): Fix typo in previous change.
 
 2008-01-17 Vinicius Jose Latorre <viniciusjl@ig.com.br>
-2008-01-17 Miles Bader <miles@gnu.org>
+	   Miles Bader <miles@gnu.org>
 
 	* blank-mode.el: New file.  Minor mode to visualise (HARD) SPACE,
 	TAB, NEWLINE.  Miles Bader <miles@gnu.org> wrote the original code
